package.json update

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tournament-bracket",
   "version": "0.1.0",
   "private": true,
-  "homepage": "nitramge2.github.io",
+  "homepage": "https://nitramge2.github.io",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
