--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://nitramge2.github.io",
   "dependencies": {
+    "@icons-pack/react-simple-icons": "^13.7.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
@@ -16,6 +17,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-scripts": "5.0.1",
+    "simple-icons": "^15.14.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
